--- a/index.html
+++ b/index.html
@@ -1,47 +1,162 @@
-// ============================================================================
-// TITAN SERVICE – Hyper‑Neon Landing 4.1
-// Clean ASCII – No parse errors, Ultra‑Black & Neon‑Blue Insanity
-// ============================================================================
-// Install dependencies:
-// npm i react react-dom framer-motion react-scroll lucide-react \
-//       react-scroll-parallax react-parallax-tilt @react-three/fiber @react-three/drei
-// TailwindCSS + shadcn/ui assumed configured.
-// ============================================================================
+# Titan Hyper‑Neon React Site – Vite + Tailwind Setup
 
-import React, { Suspense, useRef, useState, useEffect } from "react";
-import { motion, AnimatePresence } from "framer-motion";
-import { Link as ScrollLink, Element } from "react-scroll";
-import { ChevronDown, Code2, Terminal, Activity } from "lucide-react";
-import { ParallaxProvider, Parallax } from "react-scroll-parallax";
-import Tilt from "react-parallax-tilt";
-import { Canvas, useFrame } from "@react-three/fiber";
-import { OrbitControls, Center, Text3D } from "@react-three/drei";
-import { Button } from "@/components/ui/button"; // adjust import if alias differs
+Below is a ready‑to‑run **Vite** project. Copy the tree exactly, install the deps, and you’re live.
 
-/* --------------------------- Motion Variant --------------------------- */
+```
+my‑titan‑site/
+├─ index.html
+├─ package.json
+├─ postcss.config.js
+├─ tailwind.config.js
+├─ vite.config.js (auto‑generated)
+├─ public/
+│  ├─ noise.png
+│  └─ fonts/
+│     └─ Inter_Bold.json
+└─ src/
+   ├─ main.jsx
+   ├─ App.jsx
+   ├─ styles/
+   │  └─ animations.css
+   └─ assets/
+      └─ (place any images here)
+```
+
+---
+## 1. Quickstart
+```bash
+npm create vite@latest my-titan-site -- --template react
+cd my-titan-site
+# replace the generated files with the ones below
+npm i framer-motion react-scroll lucide-react react-scroll-parallax react-parallax-tilt @react-three/fiber @react-three/drei tailwindcss postcss autoprefixer
+npx tailwindcss init -p
+# copy noise.png + Inter_Bold.json → public/
+# copy animations.css → src/styles/
+# edit tailwind.config.js as below
+npm run dev
+```
+
+---
+## 2. index.html
+```html
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TITAN Service</title>
+  </head>
+  <body class="bg-black text-white overflow-x-hidden selection:bg-[#00bfff]/30">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
+```
+
+---
+## 3. package.json (scripts section only)
+```jsonc
+{
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  }
+}
+```
+
+---
+## 4. tailwind.config.js (full)
+```js
+import defaultTheme from 'tailwindcss/defaultTheme';
+
+/** @type {import('tailwindcss').Config} */
+export default {
+  content: [
+    './index.html',
+    './src/**/*.{js,jsx,ts,tsx}'
+  ],
+  theme: {
+    extend: {
+      fontFamily: {
+        sans: ['Inter', ...defaultTheme.fontFamily.sans]
+      },
+      backgroundImage: {
+        'grid-small': 'linear-gradient(90deg,rgba(255,255,255,.05)_1px,transparent_0),linear-gradient(rgba(255,255,255,.05)_1px,transparent_0)',
+        'grid-large': 'linear-gradient(90deg,rgba(255,255,255,.03)_1px,transparent_0),linear-gradient(rgba(255,255,255,.03)_1px,transparent_0)'
+      }
+    }
+  },
+  plugins: []
+};
+```
+
+---
+## 5. postcss.config.js (unchanged Tailwind/Autoprefixer)
+```js
+export default {
+  plugins: {
+    tailwindcss: {},
+    autoprefixer: {}
+  }
+};
+```
+
+---
+## 6. src/main.jsx
+```jsx
+import React from 'react';
+import ReactDOM from 'react-dom/client';
+import './index.css';
+import './styles/animations.css';
+import App from './App.jsx';
+
+ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+```
+
+`src/index.css` should just import Tailwind:
+```css
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+```
+
+---
+## 7. src/App.jsx (identical to v4.1 but **no comments that break JSX**)
+```jsx
+import React, { Suspense, useRef, useState, useEffect } from 'react';
+import { motion, AnimatePresence } from 'framer-motion';
+import { Link as ScrollLink, Element } from 'react-scroll';
+import { ChevronDown, Code2, Terminal, Activity } from 'lucide-react';
+import { ParallaxProvider, Parallax } from 'react-scroll-parallax';
+import Tilt from 'react-parallax-tilt';
+import { Canvas, useFrame } from '@react-three/fiber';
+import { OrbitControls, Center, Text3D } from '@react-three/drei';
+
+/* ---------------- Motion Helpers ---------------- */
 const fadeUp = {
   hidden: { opacity: 0, y: 80 },
   visible: (i = 1) => ({
     opacity: 1,
     y: 0,
-    transition: { delay: 0.12 * i, duration: 0.9, ease: "easeOut" }
+    transition: { delay: 0.12 * i, duration: 0.9, ease: 'easeOut' }
   })
 };
 
-const sectionStyle = "min-h-screen w-full flex flex-col justify-center items-center overflow-hidden px-6 sm:px-12";
+const sectionStyle =
+  'min-h-screen w-full flex flex-col justify-center items-center overflow-hidden px-6 sm:px-12';
 
-/* --------------------------- 3D TITAN Logo --------------------------- */
+/* ---------------- 3D Logo ---------------- */
 function Titan3D() {
   const group = useRef();
-  useFrame((_, delta) => {
-    if (group.current) group.current.rotation.y += delta * 0.3;
+  useFrame((_, d) => {
+    if (group.current) group.current.rotation.y += d * 0.3;
   });
-
   return (
     <group ref={group}>
       <Center>
         <Text3D
-          font="/fonts/Inter_Bold.json" // place JSON font here
+          font="/fonts/Inter_Bold.json"
           size={2.6}
           height={0.45}
           bevelEnabled
@@ -62,53 +177,47 @@ function Titan3D() {
   );
 }
 
-/* ------------------------ Starfield Background ------------------------ */
+/* ---------------- Background & Loader ---------------- */
 const Starfield = () => (
   <div className="pointer-events-none fixed inset-0 -z-40 animate-starfield bg-black bg-[radial-gradient(#00bfff_1px,transparent_1px)] [background-size:5px_5px]" />
 );
 
-/* ------------------------ Scroll Progress Bar ------------------------ */
 function ScrollProgress() {
   const [width, setWidth] = useState(0);
-
   useEffect(() => {
-    const handleScroll = () => {
+    const onScroll = () => {
       const max = document.body.scrollHeight - window.innerHeight;
-      const pct = (window.scrollY / max) * 100;
-      setWidth(pct);
+      setWidth((window.scrollY / max) * 100);
     };
-    window.addEventListener("scroll", handleScroll);
-    handleScroll();
-    return () => window.removeEventListener("scroll", handleScroll);
+    window.addEventListener('scroll', onScroll);
+    onScroll();
+    return () => window.removeEventListener('scroll', onScroll);
   }, []);
-
   return <motion.div style={{ width: `${width}%` }} className="fixed top-0 left-0 h-1 bg-[#00bfff] z-[9999] origin-left" />;
 }
 
-/* ------------------------------ Loader ------------------------------ */
 const Loader = () => (
   <motion.div
     className="fixed inset-0 z-[999] flex items-center justify-center bg-black"
     initial={{ scale: 1 }}
-    animate={{ scale: 0, transition: { delay: 2, duration: 1, ease: "easeInOut" } }}
+    animate={{ scale: 0, transition: { delay: 2, duration: 1 } }}
     exit={{ opacity: 0, transition: { duration: 0.5 } }}
   >
     <motion.span
       className="text-6xl font-extrabold text-[#00bfff]"
       initial={{ opacity: 0 }}
-      animate={{ opacity: 1, transition: { duration: 0.8, repeatType: "mirror", repeat: Infinity } }}
+      animate={{ opacity: 1, transition: { duration: 0.8, repeat: Infinity, repeatType: 'mirror' } }}
     >
       TITAN
     </motion.span>
   </motion.div>
 );
 
-/* --------------------------- Glitch Text --------------------------- */
 const GlitchText = ({ text }) => (
   <motion.h1
     initial={{ opacity: 0, scale: 0.7, rotateX: 35 }}
     animate={{ opacity: 1, scale: 1, rotateX: 0 }}
-    transition={{ duration: 1.3, ease: "anticipate" }}
+    transition={{ duration: 1.3, ease: 'anticipate' }}
     className="relative text-center font-extrabold text-5xl sm:text-7xl md:text-8xl text-white select-none"
   >
     <span className="before:absolute before:inset-0 before:animate-glitch before:text-cyan-400 after:absolute after:inset-0 after:animate-glitch2 after:text-[#00bfff]">
@@ -117,12 +226,12 @@ const GlitchText = ({ text }) => (
   </motion.h1>
 );
 
-/* --------------------------- Hero Section --------------------------- */
+/* ---------------- Sections ---------------- */
 const Hero = () => (
   <section id="hero" className={`${sectionStyle} bg-gradient-to-b from-black to-[#020617]`}>
     <Tilt tiltMaxAngleX={12} tiltMaxAngleY={12} glareEnable glareColor="#00bfff" glareMaxOpacity={0.25}>
       <div className="w-[300px] h-[300px] sm:w-[460px] sm:h-[460px] rounded-full shadow-[0_0_40px_#00bfff55]">
-        <Canvas camera={{ position: [0, 0, 8], fov: 48 }} shadows>
+        <Canvas camera={{ position: [0, 0, 8], fov: 48 }}>
           <ambientLight intensity={2} />
           <pointLight position={[10, 10, 10]} intensity={3} />
           <Suspense fallback={null}>
@@ -155,19 +264,12 @@ const Hero = () => (
   </section>
 );
 
-/* --------------------------- About Section --------------------------- */
 const About = () => (
   <Element name="about">
     <section id="about" className={`${sectionStyle} bg-[#020617] text-gray-100 relative`}>
       <div className="absolute inset-0 -z-10 opacity-[0.07] bg-[radial-gradient(circle_at_center,_#00bfff_0%,_transparent_60%)]" />
       <Parallax speed={-12}>
-        <motion.h2
-          variants={fadeUp}
-          initial="hidden"
-          whileInView="visible"
-          viewport={{ once: true }}
-          className="text-4xl font-bold mb-12 text-[#00bfff]"
-        >
+        <motion.h2 variants={fadeUp} initial="hidden" whileInView="visible" viewport={{ once: true }} className="text-4xl font-bold mb-12 text-[#00bfff]">
           About Me
         </motion.h2>
       </Parallax>
@@ -182,7 +284,7 @@ const About = () => (
         <div>
           <h3 className="text-xl font-semibold mb-4 text-white">Nicknames since 2020</h3>
           <ul className="list-disc list-inside space-y-2">
-            {["TS", "Titan", "CyberDragon", "ZeroDay"].map((nick, i) => (
+            {['TS', 'Titan', 'CyberDragon', 'ZeroDay'].map((nick, i) => (
               <motion.li key={nick} custom={i} variants={fadeUp}>{nick}</motion.li>
             ))}
           </ul>
@@ -190,7 +292,7 @@ const About = () => (
         <div>
           <h3 className="text-xl font-semibold mb-4 text-white">Gear I Own</h3>
           <ul className="list-disc list-inside space-y-2">
-            {["Flipper Zero", "Proxmark3", "Rubber Ducky", "Custom Red Team Laptop"].map((item, i) => (
+            {['Flipper Zero', 'Proxmark3', 'Rubber Ducky', 'Custom Red Team Laptop'].map((item, i) => (
               <motion.li key={item} custom={i} variants={fadeUp}>{item}</motion.li>
             ))}
           </ul>
@@ -198,7 +300,7 @@ const About = () => (
         <div className="sm:col-span-2">
           <h3 className="text-xl font-semibold mb-4 text-white">Focus</h3>
           <p className="leading-relaxed">
-            I focus on cutting‑edge penetration tests, red‑team ops and offensive security tools that ruthlessly expose vulnerabilities.
+            I focus on cutting-edge penetration tests, red-team ops and offensive security tools that ruthlessly expose vulnerabilities.
           </p>
         </div>
       </motion.div>
@@ -206,130 +308,12 @@ const About = () => (
   </Element>
 );
 
-/* ------------------------ What I Code Section ------------------------ */
 const WhatICode = () => (
   <Element name="code">
     <section id="code" className={`${sectionStyle} bg-gray-900 text-white`}>
       <Parallax speed={-18}>
-        <motion.h2
-          variants={fadeUp}
-          initial="hidden"
-          whileInView="visible"
-          viewport={{ once: true }}
-          className="text-4xl font-bold mb-10 text-[#00bfff]"
-        >
+        <motion.h2 variants={fadeUp} initial="hidden" whileInView="visible" viewport={{ once: true }} className="text-4xl font-bold mb-10 text-[#00bfff]">
           What I Code
         </motion.h2>
       </Parallax>
       <div className="grid grid-cols-1 sm:grid-cols-3 gap-10 max-w-5xl">
-        {[
-          { icon: <Code2 size={50} />, title: "Discord Bots", desc: "Automated moderation, AI chat & analytics." },
-          { icon: <Terminal size={50} />, title: "Security Tools", desc: "Recon, exploit and post‑exploit Swiss‑army code." },
-          { icon: <Activity size={50} />, title: "Data Streams", desc: "Ultra‑low‑latency parsing & dashboards." }
-        ].map(({ icon, title, desc }, i) => (
-          <motion.div
-            key={title}
-            custom={i}
-            variants={fadeUp}
-            initial="hidden"
-            whileInView="visible"
-            viewport={{ once: true }}
-            className="group rounded-2xl bg-[#0f172a] p-8 shadow-[0_0_25px_#00bfff40] hover:shadow-[#00bfff80] transition-shadow duration-300"
-          >
-            <div className="mb-4 text-[#00bfff] group-hover:animate-spin-verySlow">{icon}</div>
-            <h3 className="text-xl font-semibold mb-2 text-white">{title}</h3>
-            <p className="text-gray-300 leading-relaxed">{desc}</p>
-          </motion.div>
-        ))}
-      </div>
-    </section>
-  </Element>
-);
-
-/* ------------------------ Current Work Section ------------------------ */
-const CurrentWork = () => (
-  <Element name="work">
-    <section id="work" className={`${sectionStyle} bg-black text-gray-100 relative overflow-hidden`}>
-      <Parallax speed={-22}>
-        <motion.h2
-          variants={fadeUp}
-          initial="hidden"
-          whileInView="visible"
-          viewport={{ once: true }}
-          className="text-4xl font-bold mb-10 text-[#00bfff]"
-        >
-          What I'm Working On
-        </motion.h2>
-      </Parallax>
-      <motion.div
-        variants={fadeUp}
-        initial="hidden"
-        whileInView="visible"
-        viewport={{ once: true }}
-        className="max-w-3xl text-center"
-      >
-        <h3 className="text-2xl font-semibold mb-4 text-[#00bfff] animate-pulse">VANTA Bot</h3>
-        <p className="leading-relaxed mb-6 text-gray-300">
-          VANTA is a next‑gen Discord bot with modular architecture, AI moderation, live exploit feeds and zero‑latency audio, powered by Rust and TypeScript.
-        </p>
-        <Button size="lg" className="hover:scale-110 hover:shadow-[0_0_25px_#00bfff99] transition-transform duration-300">
-          Stay Tuned
-        </Button>
-      </motion.div>
-      {/* Aura orbs */}
-      <div className="absolute -top-40 -left-40 w-80 h-80 bg-[#00bfff44] rounded-full filter blur-3xl animate-floatXY" />
-      <div className="absolute bottom-[-120px] right-[-120px] w-96 h-96 bg-[#00bfff33] rounded-full filter blur-3xl animate-floatXYReverse" />
-      {/* Noise overlay */}
-      <div className="pointer-events-none absolute inset-0 -z-10 mix-blend-overlay bg-[url('/noise.png')] opacity-5" />
-    </section>
-  </Element>
-);
-
-/* ------------------------------ Main App ------------------------------ */
-export default function App() {
-  const [loading, setLoading] = useState(true);
-
-  useEffect(() => {
-    const timer = setTimeout(() => setLoading(false), 2600);
-    return () => clearTimeout(timer);
-  }, []);
-
-  return (
-    <ParallaxProvider>
-      <Starfield />
-      <ScrollProgress />
-      <AnimatePresence>{loading && <Loader />}</AnimatePresence>
-      {!loading && (
-        <>
-          <Hero />
-          <About />
-          <WhatICode />
-          <CurrentWork />
-        </>
-      )}
-    </ParallaxProvider>
-  );
-}
-
-/* ---------------------------- Tailwind Extras ---------------------------- */
-/* Add this file to your CSS pipeline (e.g. styles/animations.css) */
-/*
-@keyframes glitch{0%,100%{clip-path:inset(0 0 0 0);transform:translate(0)}10%{clip-path:inset(10% 0 15% 0);transform:translate(-3px,2px)}25%{clip-path:inset(5% 0 20% 0);transform:translate(3px,-2px)}40%{clip-path:inset(15% 0 10% 0);transform:translate(-2px,-1px)}55%{clip-path:inset(6% 0 25% 0);transform:translate(1px,3px)}70%{clip-path:inset(25% 0 5% 0);transform:translate(-3px,1px)}}
-.animate-glitch{animation:glitch 2.4s infinite alternate-reverse}
-
-@keyframes glitch2{0%,100%{transform:translate(0)}50%{transform:translate(2px,-2px)}}
-.animate-glitch2{animation:glitch2 1.6s infinite alternate}
-
-@keyframes starfield{from{background-position:0 0}to{background-position:1000px 1000px}}
-.animate-starfield{animation:starfield 75s linear infinite}
-
-@keyframes floatXY{0%,100%{transform:translate(0,0)}50%{transform:translate(30px,-20px)}}
-.animate-floatXY{animation:floatXY 12s ease-in-out infinite}
-
-@keyframes floatXYReverse{0%,100%{transform:translate(0,0)}50%{transform:translate(-30px,25px)}}
-.animate-floatXYReverse{animation:floatXYReverse 15s ease-in-out infinite}
-
-@keyframes spin-verySlow{0%{transform:rotate(0deg)}100%{transform:rotate(360deg)}}
-.animate-spin-verySlow{animation:spin-verySlow 18s linear infinite}
-*/
-// ============================================================================
