--- a/index.html
+++ b/index.html
@@ -1,189 +1,99 @@
-```html
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>TITAN – Hyper‑Neon</title>
-  <!-- Tailwind CDN (JIT) → EVERYTHING styled with utility classes -->
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    /* Tailwind custom keyframes */
-    tailwind.config = {
-      theme: {
-        extend: {
-          animation: {
-            starfield: 'starfield 90s linear infinite',
-            glitch: 'glitch 2.4s infinite alternate-reverse',
-            glitch2: 'glitch2 1.6s infinite alternate',
-            floatXY: 'floatXY 12s ease-in-out infinite',
-            floatXYR: 'floatXYR 15s ease-in-out infinite',
-            spinSlow: 'spinSlow 18s linear infinite'
-          },
-          keyframes: {
-            starfield: {
-              from: { backgroundPosition: '0 0' },
-              to: { backgroundPosition: '1000px 1000px' }
-            },
-            glitch: {
-              '0%,100%': { clipPath: 'inset(0 0 0 0)' },
-              '10%': { clipPath: 'inset(10% 0 15% 0)', transform: 'translate(-3px,2px)' },
-              '25%': { clipPath: 'inset(5% 0 20% 0)', transform: 'translate(3px,-2px)' },
-              '40%': { clipPath: 'inset(15% 0 10% 0)', transform: 'translate(-2px,-1px)' },
-              '55%': { clipPath: 'inset(6% 0 25% 0)', transform: 'translate(1px,3px)' },
-              '70%': { clipPath: 'inset(25% 0 5% 0)', transform: 'translate(-3px,1px)' }
-            },
-            glitch2: {
-              '0%,100%': { transform: 'translate(0)' },
-              '50%': { transform: 'translate(2px,-2px)' }
-            },
-            floatXY: {
-              '0%,100%': { transform: 'translate(0,0)' },
-              '50%': { transform: 'translate(30px,-20px)' }
-            },
-            floatXYR: {
-              '0%,100%': { transform: 'translate(0,0)' },
-              '50%': { transform: 'translate(-30px,25px)' }
-            },
-            spinSlow: {
-              from: { transform: 'rotate(0deg)' },
-              to: { transform: 'rotate(360deg)' }
-            }
-          }
-        }
-      }
-    };
-  </script>
-  <!-- VanillaTilt for hero tilt effect -->
-  <script src="https://cdn.jsdelivr.net/npm/vanilla-tilt@1.7.2/dist/vanilla-tilt.min.js"></script>
-  <style>
-    /* Starfield dot pattern */
-    body::before {
-      content: "";
-      position: fixed;
-      inset: 0;
-      z-index: -10;
-      background: black radial-gradient(#00bfff 1px, transparent 1px);
-      background-size: 5px 5px;
-      animation: starfield 90s linear infinite;
-    }
-    html {
-      scroll-behavior: smooth;
-    }
-  </style>
-</head>
-<body class="text-white overflow-x-hidden selection:bg-cyan-300/20">
-  <!-- Scroll progress bar -->
-  <div id="progress" class="fixed top-0 left-0 h-1 bg-cyan-400 origin-left z-[9999]"></div>
+import React from "react";
+import { BrowserRouter, Routes, Route, Link } from "react-router-dom";
+import { Canvas } from "@react-three/fiber";
+import { OrbitControls } from "@react-three/drei";
+import { motion } from "framer-motion";
+import { Button } from "@/components/ui/button";
 
-  <!-- HERO ----------------------------------------------------------------->
-  <header class="relative flex flex-col items-center justify-center min-h-screen bg-gradient-to-b from-black to-slate-950 text-center px-6">
-    <!-- Tilt container -->
-    <div class="w-72 h-72 sm:w-[460px] sm:h-[460px] bg-cyan-400/10 rounded-full shadow-[0_0_60px_#00bfff55] flex items-center justify-center" data-tilt data-tilt-max="15" data-tilt-glare data-tilt-max-glare="0.35">
-      <h1 class="text-5xl sm:text-7xl font-extrabold tracking-wider animate-spinSlow">TITAN</h1>
+/**
+ * Spinning 3‑D object for both pages.
+ */
+const SpinningTorus = () => (
+  <mesh rotation={[Math.PI / 2, 0, 0]}>    
+    <torusKnotGeometry args={[2, 0.6, 128, 32]} />
+    <meshStandardMaterial color={"#00ffff"} wireframe />
+  </mesh>
+);
+
+/**
+ * Landing page – the epic TITAN welcome.
+ */
+const Home = () => (
+  <div className="relative h-screen w-screen overflow-hidden flex items-center justify-center bg-black">
+    {/* 3‑D backdrop */}
+    <Canvas className="absolute inset-0" camera={{ position: [0, 0, 10], fov: 75 }}>
+      <ambientLight intensity={0.7} />
+      <pointLight position={[10, 10, 10]} />
+      <SpinningTorus />
+      {/* Auto‑orbit for maximum swagger */}
+      <OrbitControls enableZoom={false} autoRotate autoRotateSpeed={2} />
+    </Canvas>
+
+    {/* Foreground hero copy */}
+    <motion.div
+      initial={{ opacity: 0, scale: 0.5 }}
+      animate={{ opacity: 1, scale: 1 }}
+      transition={{ duration: 1 }}
+      className="z-10 text-center space-y-6"
+    >
+      <h1 className="text-6xl md:text-8xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-cyan-400 to-blue-600 drop-shadow-lg">
+        WELCOME TO <span className="text-white">TITAN</span>
+      </h1>
+      <p className="text-lg md:text-2xl text-gray-200">
+        Experience the ultimate power – where code meets dominance.
+      </p>
+      <Link to="/showcase">
+        <Button className="text-lg px-8 py-4 rounded-2xl bg-gradient-to-r from-blue-500 to-purple-600 shadow-xl">
+          Enter the 3D Realm
+        </Button>
+      </Link>
+    </motion.div>
+  </div>
+);
+
+/**
+ * 3‑D playground – go wild.
+ */
+const Showcase = () => (
+  <div className="relative h-screen w-screen overflow-hidden bg-gray-900 flex flex-col">
+    <Canvas className="absolute inset-0" camera={{ position: [0, 0, 12], fov: 45 }}>
+      <ambientLight intensity={0.5} />
+      <pointLight position={[10, 10, 10]} />
+      <SpinningTorus />
+      <OrbitControls autoRotate autoRotateSpeed={3} />
+    </Canvas>
+
+    <div className="z-10 flex-grow flex flex-col items-center justify-center text-center space-y-6">
+      <motion.h2
+        initial={{ y: -1000 }}
+        animate={{ y: 0 }}
+        transition={{ type: "spring", stiffness: 70, damping: 12 }}
+        className="text-5xl md:text-7xl font-bold text-white drop-shadow-md"
+      >
+        3D Showcase
+      </motion.h2>
+      <p className="text-gray-300 text-lg md:text-xl max-w-2xl">
+        Witness the insane 3‑D capabilities of TITAN – rotating torus knot, smooth interactions, and limitless potential.
+      </p>
+      <Link to="/">
+        <Button variant="ghost" className="underline text-gray-100">
+          ⟵ Back to Welcome
+        </Button>
+      </Link>
     </div>
+  </div>
+);
 
-    <!-- Glitch title -->
-    <h2 class="relative mt-12 sm:mt-16 font-extrabold text-4xl sm:text-6xl md:text-7xl select-none">
-      <span class="before:absolute before:inset-0 before:text-cyan-400 before:animate-glitch after:absolute after:inset-0 after:animate-glitch2 after:text-blue-300">
-        WELCOME TO TITAN
-      </span>
-    </h2>
-    <p class="max-w-xl mt-6 text-lg text-gray-300">Cybersecurity • Pentesting • Unrivaled Code Mastery.</p>
-    <a href="#about" class="group mt-20 flex flex-col items-center text-cyan-400 hover:text-white">
-      <svg class="w-8 h-8 animate-bounce" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"></path></svg>
-      <span class="text-sm uppercase tracking-widest">Scroll</span>
-    </a>
-    <!-- Floating aura orbs -->
-    <div class="absolute -top-32 -left-32 w-80 h-80 bg-cyan-400/30 rounded-full blur-3xl animate-floatXY"></div>
-    <div class="absolute bottom-[-120px] right-[-120px] w-96 h-96 bg-cyan-400/20 rounded-full blur-3xl animate-floatXYR"></div>
-  </header>
+/**
+ * Main entry.
+ */
+const App = () => (
+  <BrowserRouter>
+    <Routes>
+      <Route path="/" element={<Home />} />
+      <Route path="/showcase" element={<Showcase />} />
+    </Routes>
+  </BrowserRouter>
+);
 
-  <!-- ABOUT ---------------------------------------------------------------->
-  <section id="about" class="relative py-24 bg-slate-950 overflow-hidden">
-    <div class="absolute inset-0 opacity-5 bg-[radial-gradient(circle_at_center,#00bfff_0%,transparent_60%)] pointer-events-none"></div>
-    <div class="max-w-5xl mx-auto px-6">
-      <h2 class="text-4xl font-bold text-cyan-400 mb-16 text-center">About Me</h2>
-      <div class="grid gap-12 sm:grid-cols-2" id="about-grid">
-        <div>
-          <h3 class="text-xl font-semibold mb-4">Nicknames since 2020</h3>
-          <ul class="list-disc list-inside space-y-2 text-gray-300">
-            <li>TS</li>
-            <li>Titan</li>
-            <li>CyberDragon</li>
-            <li>ZeroDay</li>
-          </ul>
-        </div>
-        <div>
-          <h3 class="text-xl font-semibold mb-4">Gear I Own</h3>
-          <ul class="list-disc list-inside space-y-2 text-gray-300">
-            <li>Flipper Zero</li>
-            <li>Proxmark3</li>
-            <li>Rubber Ducky</li>
-            <li>Custom Red‑Team Laptop</li>
-          </ul>
-        </div>
-        <div class="sm:col-span-2 text-gray-300">
-          <h3 class="text-xl font-semibold mb-4">Focus</h3>
-          <p>High‑end penetration testing, red‑team ops &amp; offensive security tools that mercilessly expose vulnerabilities.</p>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- WHAT I CODE ---------------------------------------------------------->
-  <section id="code" class="py-24 bg-slate-900 text-center">
-    <h2 class="text-4xl font-bold text-cyan-400 mb-16">What I Code</h2>
-    <div class="grid gap-10 max-w-5xl mx-auto px-6 sm:grid-cols-3">
-      <div class="group bg-slate-800/80 p-8 rounded-2xl shadow-[0_0_25px_#00bfff40] hover:shadow-cyan-500/50 transition">
-        <svg class="w-12 h-12 mx-auto mb-4 text-cyan-400 group-hover:animate-spinSlow" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M2.25 12l8.954-8.955c.44-.439 1.153-.439 1.593 0L21.75 12M4.5 9.75V18a2.25 2.25 0 002.25 2.25h2.25a2.25 2.25 0 002.25-2.25v-3.498a.75.75 0 01.75-.752h2.25a.75.75 0 01.75.752V18a2.25 2.25 0 002.25 2.25h2.25A2.25 2.25 0 0021 18V9.75"></path></svg>
-        <h3 class="text-xl font-semibold mb-2">Discord Bots</h3>
-        <p class="text-gray-300">Automated moderation, AI chat &amp; analytics.</p>
-      </div>
-      <div class="group bg-slate-800/80 p-8 rounded-2xl shadow-[0_0_25px_#00bfff40] hover:shadow-cyan-500/50 transition">
-        <svg class="w-12 h-12 mx-auto mb-4 text-cyan-400 group-hover:animate-spinSlow" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M3 5.25h18M3 12h18m-9 6.75h9"></path></svg>
-        <h3 class="text-xl font-semibold mb-2">Security Tools</h3>
-        <p class="text-gray-300">Recon, exploit &amp; post‑exploit Swiss‑army code.</p>
-      </div>
-      <div class="group bg-slate-800/80 p-8 rounded-2xl shadow-[0_0_25px_#00bfff40] hover:shadow-cyan-500/50 transition">
-        <svg class="w-12 h-12 mx-auto mb-4 text-cyan-400 group-hover:animate-spinSlow" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13.5 6.75v10.5M6.75 13.5h10.5m-6-6h6" /></svg>
-        <h3 class="text-xl font-semibold mb-2">Data Streams</h3>
-        <p class="text-gray-300">Ultra‑low‑latency parsing &amp; dashboards.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- CURRENT WORK --------------------------------------------------------->
-  <section id="work" class="relative py-24 bg-black overflow-hidden text-center">
-    <h2 class="text-4xl font-bold text-cyan-400 mb-12">What I'm Working On</h2>
-    <h3 class="text-2xl font-semibold text-cyan-300 animate-pulse mb-4">VANTA Bot</h3>
-    <p class="max-w-3xl mx-auto px-6 text-gray-300 mb-8">Next‑gen Discord bot with modular core, AI moderation, live exploit feeds &amp; zero‑latency audio. Built in Rust + TypeScript.</p>
-    <button class="px-6 py-3 rounded-full bg-cyan-500 hover:bg-cyan-600 transition drop-shadow-lg hover:scale-110">Stay Tuned</button>
-    <!-- noise overlay -->
-    <div class="pointer-events-none absolute inset-0 mix-blend-overlay bg-[url(https://i.imgur.com/q4dXy3M.png)] opacity-5"></div>
-  </section>
-
-  <!-- FOOTER --------------------------------------------------------------->
-  <footer class="py-6 text-center bg-slate-950 text-gray-500 text-sm">© 2025 TITAN Service. All Rights Reserved.</footer>
-
-  <!-- JS: scroll progress & reveal ---------------------------------------->
-  <script>
-    // progress bar
-    window.addEventListener('scroll', () => {
-      const h = document.documentElement.scrollHeight - window.innerHeight;
-      document.getElementById('progress').style.width = (window.scrollY / h) * 100 + '%';
-    });
-
-    // simple fade reveal
-    const observer = new IntersectionObserver(entries => {
-      entries.forEach(e => e.target.classList.toggle('opacity-0', !e.isIntersecting));
-    }, { threshold: 0.15 });
-    document.querySelectorAll('#about-grid > div, [id="code"] .group').forEach(el => {
-      el.classList.add('transition', 'duration-700', 'translate-y-10', 'opacity-0');
-      observer.observe(el);
-      el.addEventListener('transitionend', () => el.classList.remove('translate-y-10'));
-    });
-  </script>
-</body>
-</html>
-```
+export default App;
